--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -59,6 +59,10 @@ $cautionBack       : $blackGold;
 $cautionText       : $white;
 $cautionBackHover  : $grey;
 $cautionTextHover  : $black;
+$altBack           : $green;
+$altText           : $white;
+$cautionBackHover  : $grey;
+$cautionTextHover  : $black;
 
 $formElementBorder        : $borderRule;
 $placeColor               : $baseText;
