--- a/web/themes/crane/scss/base/_03-mixins.scss
+++ b/web/themes/crane/scss/base/_03-mixins.scss
@@ -8,6 +8,12 @@
 	-webkit-transition: all $time ease;
 	-webkit-transform: translateZ(0);
 }
+@mixin transColor($time){
+	transition: color $time ease,background-color $time ease;
+	-moz-transition: color $time ease,background-color $time ease;
+	-webkit-transition: color $time ease,background-color $time ease;
+	-webkit-transform: translateZ(0);
+}
 
 ///mixin - transAll(.3s)
 @mixin transClear{
