--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -61,8 +61,8 @@ $cautionBackHover  : $grey;
 $cautionTextHover  : $black;
 $altBack           : $green;
 $altText           : $white;
-$cautionBackHover  : $grey;
-$cautionTextHover  : $black;
+$altBackHover      : $grey;
+$altTextHover      : $black;
 
 $formElementBorder        : $borderRule;
 $placeColor               : $baseText;
