Advanced bleed mixin

--- a/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -458,12 +458,10 @@
 // set child elements into 2 columns using flex and bleed
 @mixin twoColumn($xAlign,$yAlign,$colSpace){
 	width: 100%;
-	@include bleed($colSpace);
+	@include bleed(padding,$colSpace);
 	@include safeFlex(row,wrap,$xAlign,$yAlign);
 	& > *{
 		width: 100%;
-		padding-left: $colSpace / 2;
-		padding-right: $colSpace / 2;
 		@include smallTab{
 			width: 50%;
 		}
@@ -473,12 +471,10 @@
 // set child elements into three columns using flex and bleed
 @mixin threeColumn($xAlign,$yAlign,$colSpace){
 	width: 100%;
-	@include bleed($colSpace);
+	@include bleed(padding,$colSpace);
 	@include safeFlex(row,wrap,$xAlign,$yAlign);
 	& > *{
 		width: 100%;
-		padding-left: $colSpace / 2;
-		padding-right: $colSpace / 2;
 		@include smallTab{
 			width: 50%;
 		}
@@ -491,12 +487,10 @@
 //set child elements into four columns using flex and bleed
 @mixin fourColumn($xAlign,$yAlign,$colSpace){
 	width: 100%;
-	@include bleed($colSpace);
+	@include bleed(padding,$colSpace);
 	@include safeFlex(row,wrap,$xAlign,$yAlign);
 	& > *{
 		width: 100%;
-		padding-left: $colSpace / 2;
-		padding-right: $colSpace / 2;
 		@include smallTab{
 			width: 50%;
 		}
@@ -510,10 +504,19 @@
 }
 
 // set negative edges on a parent to allow children to have equal space between without overflowing edges
-@mixin bleed($bleedWidth){
+@mixin bleed($bleedType,$bleedWidth){
 	margin-left: $bleedWidth * -0.5;
 	margin-right: $bleedWidth * -0.5;
 	@include calc(width, "100% + "$bleedWidth);
+	& > *{
+		@if $bleedType == 'margin'{
+			margin-left: $bleedWidth * 0.5;
+			margin-right: $bleedWidth * 0.5;
+		}@else if $bleedType == 'padding'{
+			padding-left: $bleedWidth * 0.5;
+			padding-right: $bleedWidth * 0.5;
+		}
+	}
 }
 
 
