--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-views/_blog-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-views/_blog-views.scss
@@ -13,14 +13,12 @@
 	
 	.view-content{
 		@include safeFlex(row,wrap,null,null);
-		@include bleed(30px);
+		@include bleed(padding,30px);
 	}
 
 	.views-row{
 		width: 100%;
 		margin-bottom: $spaceLg;
-		padding-right: 15px;
-		padding-left: 15px;
 		@include smallTab{
 			width: 50%;
 		}
