--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
@@ -22,15 +22,11 @@ footer {
 		//limit footer content to max-width and set flex parenting
 		& > div{
 			@include tab{
-				@include bleed(40px);
+				@include bleed(padding,40px);
 			}
 			& > *{
 				&:not(:last-child){
 					margin-bottom: $spaceMd;
-				}
-				@include tab{
-					padding-left: 20px;
-					padding-right: 20px;
 				}
 				h2.block-title{
 					text-align: left;
